--- a/src/App.css
+++ b/src/App.css
@@ -63,3 +63,30 @@
               font-weight: 400;
        font-style: normal;
      } 
+
+     @font-face {
+       font-family: 'Outfit';
+       src:url('/src/Asset/Font/Outfit/Outfit-Light.woff2') format('woff2');
+       font-weight: 300;
+       font-style: normal;
+     }
+     
+     @font-face {
+       font-family: 'Outfit';
+       src: url('/src/Asset/Font/Outfit/Outfit-Regular_1.woff') format('woff');
+       font-weight: 400;
+       font-style: normal;
+     }
+     @font-face {
+       font-family: 'Outfit';
+       src: url('/src/Asset/Font/Outfit/Outfit-Medium.ttf') format('woff');
+       font-weight: 500;
+       font-style: normal;
+     }
+     
+     @font-face {
+       font-family: 'Outfit';
+       src: url('/src/Asset/Font/Outfit/Outfit-SemiBold.woff') format('woff');
+       font-weight: 600;
+       font-style: normal;
+     }
