--- a/src/Pages/AccountManagement/ReCaptcha.css
+++ b/src/Pages/AccountManagement/ReCaptcha.css
@@ -4,6 +4,8 @@ iframe{
     width: auto !important;
     border: 1px solid #205DA8 !important;
     border-radius: 12px !important;
+    cursor: pointer;
+    font-family: 'Gilroy' !important;
    
 }
 .recaptcha{
