--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,9 @@ code {
     monospace;
 }
 .custom__control {
-  min-height: 40px !important;
-  padding-top: 5px !important;
-  padding-bottom: 5px !important;
+  min-height: 45px !important;
 }
+
 .customs__control {
   min-height: 47px !important;
   height: auto !important;
@@ -23,6 +22,12 @@ code {
   padding-bottom: 0.375rem !important;
   font-size: 0.875rem !important;
 }
+.custom__placeholder {
+  color: oklch(70.8% 0 0) !important; 
+  font-weight: 500;
+  font-family: 'Gilroy', sans-serif;
+}
+
 
 
 
